# bfio

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  cmake_uninstall.cmake.in  example.cpp
examples/: CMakeLists.txt  example_1.cpp  example_2.cpp  example_3.cpp
include/: bfio.h  biol.h
tests/: CMakeLists.txt  tests.cpp
